--- a/config/config.json
+++ b/config/config.json
@@ -1,16 +1,16 @@
 {
   "development": {
-    "database": "express_auth_dev",
+    "database": "bookClub_dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
-    "database": "express_auth_test",
+    "database": "bookClub_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "database": "express_auth_prod",
+    "database": "bookClub_prod",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
